--- a/.vscode/settings.shared.json
+++ b/.vscode/settings.shared.json
@@ -15,6 +15,6 @@
   "i18n-ally.displayLanguage": "ko",
    "[json]": {
   "editor.defaultFormatter": "vscode.json-language-features",
-  "editor.formatOnSave": false
+  "editor.formatOnSave": true,
 }
 }
